🩹 💄  Fix anchor navigation safari overflow issues

--- a/components/home/anchor-navigation/anchor-navigation.scss
+++ b/components/home/anchor-navigation/anchor-navigation.scss
@@ -85,6 +85,8 @@
     }
 
     &.active {
+      width: auto;
+      
       &::before {
         opacity: 0.2;
       }
