--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,5 +1,6 @@
 html {
   font-size: $font-base;
+  scroll-behavior: smooth;
 }
 
 body {
